# akioi-2048-dqn

./: .gitignore  README.md  akioi_gym.py  choose_move.py  config.json  eval.py  pyproject.toml  test.py  train.py
