[project]
name = "akioi-2048-rl"
version = "0.1.0"
requires-python = ">=3.9,<3.10"

dependencies = [
  "akioi-2048>=0.2.0",
  "gymnasium==0.29.1",
  "stable-baselines3==2.3.2",
  "huggingface_sb3",
  "huggingface-hub",
  "torch==2.7.1",
  "numpy<2",
  "tqdm",
  "tensorboard>=2.19.0",
  "jason-personal-lib>=0.1.2",
]
